Improve SSF scorecard, Refactor main tableWrapper sanityChecks so they are executable on various engines. Add unit-tests (based on testcontainers) to tests various DBs, including CLickHouse